[gd_scene load_steps=5 format=3 uid="uid://town_screen"]

[ext_resource type="Script" path="res://src/ui/TownScreen.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://top_hud" path="res://src/ui/TopHUD.tscn" id="2_hud"]
[ext_resource type="PackedScene" uid="uid://bqe6er2xuyggx" path="res://src/ui/TaskListHUD.tscn" id="3_task"]
[ext_resource type="PackedScene" uid="uid://bottom_hud" path="res://src/ui/BottomHUD.tscn" id="4_nav"]

[node name="TownScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.05, 0.03, 1)

[node name="TopHUD" parent="." instance=ExtResource("2_hud")]
layout_mode = 1

[node name="TaskListHUD" parent="." instance=ExtResource("3_task")]
layout_mode = 1

[node name="BottomHUD" parent="." instance=ExtResource("4_nav")]
layout_mode = 1

[node name="Actions" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="TavernButton" type="Button" parent="Actions"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "üçª VISIT TAVERN"

[node name="MarketButton" type="Button" parent="Actions"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "‚öñÔ∏è VILLAGE MARKET"

[node name="QuestButton" type="Button" parent="Actions"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "üìú DAILY QUESTS"

[node name="CraftingButton" type="Button" parent="Actions"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "üî® WORKBENCH"
